--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -179,6 +179,8 @@ $font-path-fau-chimera: './fonts/fau-chimera/';
 // Font sizes
 $font-size-rembase: 100%; 
 $font-size-rembase-screen-xl: 110%;
+$font-size-rembase-screen-xxs: 90%; 
+$screen-minrembase:	    360px;
 
 $font-size-gridbase: 16;
 $font-size-base: 16;
