--- a/src/sass/structure/navigation/_portalmenus.scss
+++ b/src/sass/structure/navigation/_portalmenus.scss
@@ -11,11 +11,11 @@
     a {
         @include defaultlinkstyle();
         text-decoration: none;
-        
-         color: var(--color-Text);
+
+        color: var(--color-Text);
     }
-    
-   
+
+
 }
 
 main .subpages-menu,
@@ -28,15 +28,19 @@ main .subpages-menu,
         text-decoration: none;
     }
 
+    svg .fallback {
+        fill: var(--color-menulink-hover-text);
+    }
+
     a:hover,
     a:focus {
         text-decoration: none;
         background-color: var(--color-menulink-hover-bg);
         color: var(--color-menulink-hover-text);
 
-	svg .fallback  {
-	    fill: var(--color-menulink-hover-text);
-	}
+        svg .fallback {
+            fill: var(--color-menulink-hover-text);
+        }
     }
 
 }
@@ -45,51 +49,44 @@ main .subpages-menu,
     @include no-list;
     margin: 20px 0;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     column-gap: floor(math.div($grid-gutter-width, 2));
     row-gap: $grid-gutter-width;
     flex-wrap: wrap;
-
-
 
     li {
         @include no-list;
         display: flex;
         flex-direction: column;
         align-items: center;
-
         background-image: none;
+        background: var(--color-ContentRegions);
         padding: 0px;
-	
-	width: $contentmenu-xxs-width;
-	
-	
-	@media (min-width: $screen-sm) {
-	    width: $contentmenu-default-width;
-	}
-        border: 1px solid  var(--color-ContentBorders);
-        
-         @include box-shadow(1px 3px 10px transparent);
-        &:hover {
-             @include box-shadow(1px 3px 10px var(--color-ContentBorders));
+        width: $contentmenu-xxs-width;
+        @media (min-width: $screen-sm) {
+            width: $contentmenu-default-width;
         }
-       
-
+        border: 1px solid var(--color-ContentBorders);
+        @include box-shadow(1px 3px 10px transparent);
+        &:hover {
+            @include box-shadow(1px 3px 10px var(--color-ContentBorders));
+        }
 
         .thumb {
             overflow: hidden;
             position: relative;
+            border-bottom: 1px solid var(--color-ContentBorders);
 
             a {
                 text-decoration: none;
-
+                background-color: darken($colorStandardHellgrau, 3%);
                 display: block;
                 position: relative;
-		width: 100%;
-		height: $contentmenu-xxs-maxheight;
-		@media (min-width: $screen-sm) {
-		    height: $contentmenu-default-height;
-		}
+                width: 100%;
+                height: $contentmenu-xxs-maxheight;
+                @media (min-width: $screen-sm) {
+                    height: $contentmenu-default-height;
+                }
 
 
                 img {
@@ -101,21 +98,21 @@ main .subpages-menu,
 
                 svg {
                     padding: 22px;
-		   
+
                 }
 
 
                 &.ext-link:after {
                     @include svg-icon-place();
                     background-image: svg-icon-external-link($color-content-links);
-                    color: var(--color-Text);                    
+                    color: var(--color-Text);
                     position: absolute;
                     top: 0px;
                     right: 0px;
                     z-index: 10;
                     height: 1.4rem;
                     width: 1.4rem;
-                   
+
 
                 }
             }
@@ -128,19 +125,21 @@ main .subpages-menu,
         .portaltop {
             display: block;
             @include px2rem($font-size-contentmenu-title);
-	    
-	    width: $contentmenu-xxs-width;
-	    @media (min-width: $screen-sm) {
-		width: $contentmenu-default-width;
-	    }
+            border-bottom: 1px solid var(--color-ContentBorders);
+
+            width: $contentmenu-xxs-width;
+            @media (min-width: $screen-sm) {
+                width: $contentmenu-default-width;
+            }
             font-weight: bold;
 
             a {
                 width: 100%;
                 display: inline-block;
-                padding: 10px;
+                padding: 10px 10px 8px 10px;
                 text-align: center;
             }
+
             a:hover,
             a:focus {
                 text-decoration: none;
@@ -148,38 +147,38 @@ main .subpages-menu,
                 color: var(--color-menulink-hover-text);
 
             }
+
             a.ext-link:after {
                 @include svg-icon-place();
                 background-image: svg-icon-external-link($color-content-links);
                 color: var(--color-Text);
                 vertical-align: top;
             }
-            a.ext-link:hover:after, 
+
+            a.ext-link:hover:after,
             a.ext-link:focus:after {
-                 background-image: svg-icon-external-link($color-menulink-hover-text);
+                background-image: svg-icon-external-link($color-menulink-hover-text);
             }
-            
-          
+
+
         }
-       
+
 
         ul {
             @include no-list;
             width: 100%;
-            
+
             li {
                 @include no-list;
-                padding: 0;
+                padding: 3px 0;
                 background: none;
                 display: table;
-                border-left: none;
-                border-right: none;
-                border-bottom: 1px solid var(--color-ContentBorders);
+                border: none;
                 width: 100%; //  ($contentmenu-default-width - floor(math.div($grid-gutter-width, 2)));
                 box-shadow: none;
-                
+
                 &:hover {
-                     box-shadow: none;
+                    box-shadow: none;
                 }
             }
 
@@ -191,30 +190,33 @@ main .subpages-menu,
                 &::before,
                 a {
                     color: var(--color-menulink-hover-text);
-		    
+
                 }
             }
 
             li:before {
                 @include svg-icon-place();
                 background-image: svg-angle-right($color-content-links);
-                
+                background-position: 0.4rem .45rem;
+
                 font-weight: bold;
                 display: table-cell;
                 vertical-align: middle;
                 color: var(--color-Default);
-                
+
             }
+
             li:focus:before, li:hover:before {
                 @include svg-icon-place();
                 display: table-cell;
                 background-image: svg-angle-right($color-button-hover-text);
+                background-position: 0.4rem .45rem;
             }
 
             a {
                 text-decoration: none;
                 display: table-cell;
-                padding: 0.4rem 0;
+                padding: 0.4rem !important;
                 @include px2rem($font-size-contentmenu-link);
             }
 
@@ -226,47 +228,53 @@ main .subpages-menu,
                 font-weight: normal;
 
             }
+
             a.ext-link:after {
                 @include svg-icon-place();
                 background-image: svg-icon-external-link($color-content-links);
                 color: var(--color-Text);
                 vertical-align: top;
             }
+
             a.ext-link:hover:after, a.ext-link:focus:after {
-                 background-image: svg-icon-external-link($color-menulink-hover-text);
+                background-image: svg-icon-external-link($color-menulink-hover-text);
             }
-            
-            
+
+
         }
-        
+
         &.textcol-phil {
             .portaltop a {
-                 background-color: var(--color-phil-ci-hell);
-                 color: var(--color-phil-ci-hell-kontrast);
+                background-color: var(--color-phil-ci-hell);
+                color: var(--color-phil-ci-hell-kontrast);
             }
         }
-         &.textcol-rw {
+
+        &.textcol-rw {
             .portaltop a {
-                 background-color: var(--color-rw-ci-hell);
-                 color: var(--color-rw-ci-hell-kontrast);
+                background-color: var(--color-rw-ci-hell);
+                color: var(--color-rw-ci-hell-kontrast);
             }
         }
-         &.textcol-nat {
+
+        &.textcol-nat {
             .portaltop a {
-                 background-color: var(--color-nat-ci-hell);
-                 color: var(--color-nat-ci-hell-kontrast);
+                background-color: var(--color-nat-ci-hell);
+                color: var(--color-nat-ci-hell-kontrast);
             }
         }
-         &.textcol-tf {
+
+        &.textcol-tf {
             .portaltop a {
-                 background-color: var(--color-tf-ci-hell);
-                 color: var(--color-tf-ci-hell-kontrast);
+                background-color: var(--color-tf-ci-hell);
+                color: var(--color-tf-ci-hell-kontrast);
             }
         }
-         &.textcol-med {
+
+        &.textcol-med {
             .portaltop a {
-                 background-color: var(--color-med-ci-hell);
-                 color: var(--color-med-ci-hell-kontrast);
+                background-color: var(--color-med-ci-hell);
+                color: var(--color-med-ci-hell-kontrast);
             }
         }
     }
