--- a/src/sass/structure/navigation/_portalmenus.scss
+++ b/src/sass/structure/navigation/_portalmenus.scss
@@ -6,8 +6,9 @@
 
 
 .contentmenu {
-    @extend .row;
-
+  //  @extend .row;
+    width: 100%;
+    
     a {
         @include defaultlinkstyle();
         text-decoration: none;
