--- a/src/sass/structure/navigation/_portalmenus.scss
+++ b/src/sass/structure/navigation/_portalmenus.scss
@@ -6,7 +6,7 @@
 
 
 .contentmenu {
-  //  @extend .row;
+    //@extend .row;
     width: 100%;
     
     a {
@@ -76,24 +76,25 @@ main .subpages-menu,
         }
         @include box-shadow(1px 3px 10px transparent);
 
+        svg .fallback {
+            fill: var(--color-menulink-hover-text);
+        }
+
         &:hover,
         &:focus {
             @include box-shadow(1px 3px 10px var(--color-ContentBorders));
+            svg .fallback {
+                fill: var(--color-menulink-hover-text);
+            }
         }
 
         .skewed.no-sub & {
             box-shadow: none;
-            svg .fallback {
-                fill: var(--color-menulink-hover-text);
-            }
             &:focus,
             &:hover {
                 a {
                     background-color: var(--color-menulink-hover-bg);
                     color: var(--color-menulink-hover-text);
-                }
-                svg .fallback {
-                    fill: var(--color-menulink-hover-text);
                 }
             }
         }
@@ -124,36 +125,34 @@ main .subpages-menu,
                 position: relative;
                 width: 100%;
 
-                .contentmenu.size_2-1 & {
-                    aspect-ratio: 2 / 1;
-                }
-                .contentmenu.size_3-2 & {
-                    aspect-ratio: 3 / 2;
-                }
-                .contentmenu.size_3-4 & {
-                    aspect-ratio: 3 / 4;
-                }
-
-                img {
+                img, svg {
                     height: 100%;
                     width: 100%;
                     object-fit: cover;
                     box-shadow: none;
                     transition: transform 1s;
+                    .contentmenu.size_2-1 & {
+                        aspect-ratio: 2 / 1;
+                    }
+                    .contentmenu.size_3-2 & {
+                        aspect-ratio: 3 / 2;
+                    }
+                    .contentmenu.size_3-4 & {
+                        aspect-ratio: 3 / 4;
+                    }
                 }
+
                 &:hover img {
                     transform: scale(1.05);
                     filter: grayscale(60%);
                     .skewed & {
                         transform: none;
-                        filter: none;
                     }
                 }
 
                 svg {
                     padding: 8%;
-                    height: 100%;
-                    width: 100%;
+                    margin-bottom: -7px;
                 }
 
 
@@ -193,6 +192,11 @@ main .subpages-menu,
                 width: 100%;
                 background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
                 border: none;
+            }
+
+            .no-thumb &,
+            .no-fallback > &{
+                border-top: 1px solid var(--color-ContentBorders);
             }
 
             &:hover,
