--- a/css/fau-theme-editor-style.css
+++ b/css/fau-theme-editor-style.css
@@ -161,6 +161,14 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*
+$font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
+$font-size-h2:            floor(($font-size-base * 2.15)) !default; // ~30px
+$font-size-h3:            ceil(($font-size-base * 1.7)) !default; // ~24px
+$font-size-h4:            ceil(($font-size-base * 1.25)) !default; // ~18px
+$font-size-h5:            $font-size-base !default;
+$font-size-h6:            ceil(($font-size-base * 0.85)) !default; // ~12px
+*/
+/*
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
@@ -314,23 +322,6 @@ a.bg-danger:focus {
   background-color: #e4b9b9;
 }
 
-dl {
-  margin-top: 0;
-}
-
-dt,
-dd {
-  line-height: 1.428571429;
-}
-
-dt {
-  font-weight: bold;
-}
-
-dd {
-  margin-left: 0;
-}
-
 .dl-horizontal dd:before, .dl-horizontal dd:after {
   content: " ";
   display: table;
@@ -367,7 +358,7 @@ blockquote small,
 blockquote .small {
   display: block;
   font-size: 80%;
-  line-height: 1.428571429;
+  line-height: 1.5;
   color: #777777;
 }
 blockquote footer:before,
@@ -5709,6 +5700,27 @@ ol li ol li ul li {
 }
 ol li ul li {
   list-style-type: circle;
+}
+
+/*-----------------------------------------------------------------------------------*/
+/* Definitionlists
+/*-----------------------------------------------------------------------------------*/
+dl {
+  margin: 1.5rem 0;
+}
+
+dt {
+  font-weight: bold;
+  margin: 0.5rem 0 0.2rem 0;
+}
+
+dd {
+  margin-left: 2rem;
+}
+
+dd > dl {
+  margin-top: 0.5rem;
+  margin-left: 2rem;
 }
 
 /*-----------------------------------------------------------------------------------*/
