--- a/src/sass/plugins/_rrze-calendar.scss
+++ b/src/sass/plugins/_rrze-calendar.scss
@@ -79,11 +79,11 @@
 	background: var(--color-primary-ci-hell); 
 	color:  var(--color-primary-ci-hell-kontrast); 
 	
-	&:hover,
-	&:focus {
-	    background: var(--color-primary-dunkler); 
-	    color:  var(--color-primary-dunkler-kontrast); 
-	}
+//	&:hover,
+//	&:focus {
+//	    background: var(--color-primary-dunkler); 
+//	    color:  var(--color-primary-dunkler-kontrast); 
+//	}
 	padding: 0.3rem;
 	width: 3rem;
 	text-align: center;
